        }
        allow admin:monit

New: The SSL 3DES ciphers are disabled by default now (vulnerable to Sweet32 attacks).

New: Issue #509: Added support to override the SSL/TLS ciphers list and enabled
server-side ciphers preference. Example (using monit's default ciphers string):
    set ssl {
        ciphers: "ALL:!DES:!3DES:!RC4:!aNULL:!LOW:!EXP:!IDEA:!MD5:@STRENGTH"
    }

Fixed: Issue #488: Ping test may fail.

Fixed: Issue #495: position independent CSRF cookie value.

Fixed: Issue #496: Allow overriding the Accept HTTP header

Fixed: Issue #501: check program may fail when parent service is not monitored every cycle and multiple
services depend on it.

Fixed: Issue #510: The "set ssl" options defaults had no effect on the Monit HTTPD interface.

Fixed: If the connection timed out, Monit reported incorrect error: "Resource temporarily unavailable".


Version 5.20.0

New: Add gzip compression support to the HTTP GUI.

New: Add gzip compression support for M/Monit (requires M/Monit 3.6.0 or later). Note that the first
message is always uncompressed, the compression is enabled when suitable M/Monit version is detected.

New: Issue #448: Added global "set onreboot <start | nostart | laststate>" statement which allows
to override default service startup policy ("onreboot start" by default).

New: Added new options to "set limits" statement, for setting default timeouts:
      programTimeout:    300 seconds # default timeout for check program
      stopTimeout:       30 seconds  # default timeout for service stop
      startTimeout:      30 seconds  # default timeout for service start
      restartTimeout:    30 seconds  # default timeout for service restart

New: The cpu, memory, swap, inode and space tests now allow also decimal values for percent limit.

New: Issue #457: Update HOME environment variable when executing program as other user.

Fixed: CSRF vulnerability (CVE-2016-7067). M/Monit users related note: M/Monit service actions now